Description: More numbering/more bullets always opens Customize tab Steps to Reproduce: 1. Open Writer 2. Click the 'arrow down' part of Numbered list toggle in toolbar 3. Click more numbering 4. Opens Customize tab Actual Results: Customize tab Expected Results: Outline numbering & image numbering are also regular used variants. It's not that you by definition want to create a customized variant. So maybe set it to the last tab used? Instead of fixed Customize tab. So maybe simply open the last used.. As mostly happens with the dialogs? Reproducible: Always User Profile Reset: No Additional Info: Version: 7.2.1.0.0+ (x64) / LibreOffice Community Build ID: 8fdbb8aed1b48734a717d5f98ada566de7204605 CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win Locale: nl-NL (nl_NL); UI: en-US Calc: CL
I'd expect _more_ options. So my take is to open at Numbering pr Bullet respectively and not to restore the last tab.
1. The "ordered" (numbering) and "unordered" (bullets) tabs are identical to what is shown in the dropdown box - therefore no value in offering the corresponding tab in response to "More ..." 2. Perhaps "More..." label should become "Customize" (which would give truth/accuracy in labeling)
(In reply to sdc.blanco from comment #2) > 1. The "ordered" (numbering) and "unordered" (bullets) tabs are identical to > what is shown in the dropdown box - therefore no value in offering the > corresponding tab in response to "More ..." True > 2. Perhaps "More..." label should become "Customize" (which would give > truth/accuracy in labeling) There are more types of bullet in the dialog (not in the drop down) * Outline * Image (bullets) So this is also incorrect, IMHO That's why I proposed open the last accessed tab. There is a group who likely prefers having Customize open by default. And others use it to access Outline or Image bullets.
(In reply to sdc.blanco from comment #2) > 2. Perhaps "More..." label should become "Customize" (which would give > truth/accuracy in labeling) I like the "Customize" idea. To open the last used tab still requires some proper wording and is in-congruent to "More <...>" and "Customize". And eventually I'd prefer if all Bullets & Numbering dialogs become reworked as done for Impress (Format > B&N...) -> bug 120905. Code pointer: The labels are defined in include/svx/strings.hrc as RID_SVXSTR_MOREBULLETS and RID_SVXSTR_MORENUMBERING and assigned to the button in c'tor of NumberingPopup at svx/source/tbxctrls/bulletsnumbering.cxx. I would just remove this code and use a static label in the UI svx/uiconfig/ui/numberingwindow.ui.
(In reply to Heiko Tietze from comment #4) > And eventually I'd prefer if all Bullets & Numbering dialogs become reworked > as done for Impress (Format > B&N...) -> bug 120905. +1
Hey can I fix that? I understood that you want to save somehow which tab was used in "More.." of Ordered list. That's all?
(In reply to Naman from comment #6) > Hey can I fix that? I understood that you want to save somehow which tab was > used in "More.." of Ordered list. That's all? If it's a single hack and not assigned, yes, anyone can work on it. You can also check in Gerrit's search with the message: parameter, if there is any unmerged patch with the bug ID to be sure.
Assign the ticket by setting Assignee to yourself and the status to Assigned.
Arvind K committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/2ca71b5c6e0374254e7c75c75e54fa6a8caebfde tdf#146748 Change 'More Numbering/Bullets' options to 'Customize' It will be available in 7.6.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.