tdf#146748 Change 'More Numbering/Bullets' options to 'Customize'

Change-Id: Ia9ae20b8c73ddd762424c99eedbaf145fed81935
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148142
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>